--- a/package.json
+++ b/package.json
@@ -18,5 +18,14 @@
     "nodemon": "^2.0.12",
     "ts-node": "^10.1.0",
     "typescript": "^4.3.5"
+  },
+  "volta": {
+    "node": "16.14.2"
+  },
+  "engines": {
+    "node": "16.14.2"
+  },
+  "devDependencies": {
+    "@tsconfig/node16": "^1.0.2"
   }
 }
